added information on encoding issues for windows users

--- a/index.ipynb
+++ b/index.ipynb
@@ -368,6 +368,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Windows Users:**  \n",
+    " The default encoding type set by Windows OS is different than that of MacOS or Linux. To ensure the proper encoding when loading the `usa_2016_gold_medals.csv` dataset you will need specify the encoding type using `encoding='utf-8'`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -508,6 +516,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Windows Users:\n",
+    "When using `csv.DictWriter` to write to a file, the default settings may cause unnecessary blank lines to be saved to the file. This can be avoided by adding the argument `dialect='unix'`. While this does not affect the data, it will help to mitigate any issues which may be caused by the additional blank lines when doing other data processing tasks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -526,7 +542,7 @@
    "source": [
     "We can use the bash command `cat` to visually inspect the file that was created:\n",
     "\n",
-    "(If you are running this lesson on a Windows or other non-Unix computer, you may need to use some other tool to do this, or just skip this step since it is just for demonstration purposes.)"
+    "> If you are running this lesson on a Windows or other non-Unix computer, you may need to use some other tool to do this, or just skip this step since it is just for demonstration purposes."
    ]
   },
   {
@@ -538,34 +554,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Event,Name\r",
-      "\r\n",
-      "1500M Men,Matthew CENTROWITZ\r",
-      "\r\n",
-      "400M Hurdles Men,Kerron CLEMENT\r",
-      "\r\n",
-      "4X400M Relay Men,null\r",
-      "\r\n",
-      "Decathlon Men,Ashton EATON\r",
-      "\r\n",
-      "Long Jump Men,Jeff HENDERSON\r",
-      "\r\n",
-      "Shot Put Men,Ryan CROUSER\r",
-      "\r\n",
-      "Triple Jump Men,Christian TAYLOR\r",
-      "\r\n",
-      "100M Hurdles Women,Brianna ROLLINS\r",
-      "\r\n",
-      "400M Hurdles Women,Dalilah MUHAMMAD\r",
-      "\r\n",
-      "4X100M Relay Women,null\r",
-      "\r\n",
-      "4X400M Relay Women,null\r",
-      "\r\n",
-      "Long Jump Women,Tianna BARTOLETTA\r",
-      "\r\n",
-      "Shot Put Women,Michelle CARTER\r",
-      "\r\n"
+      "Event,Name\n",
+      "1500M Men,Matthew CENTROWITZ\n",
+      "400M Hurdles Men,Kerron CLEMENT\n",
+      "4X400M Relay Men,null\n",
+      "Decathlon Men,Ashton EATON\n",
+      "Long Jump Men,Jeff HENDERSON\n",
+      "Shot Put Men,Ryan CROUSER\n",
+      "Triple Jump Men,Christian TAYLOR\n",
+      "100M Hurdles Women,Brianna ROLLINS\n",
+      "400M Hurdles Women,Dalilah MUHAMMAD\n",
+      "4X100M Relay Women,null\n",
+      "4X400M Relay Women,null\n",
+      "Long Jump Women,Tianna BARTOLETTA\n",
+      "Shot Put Women,Michelle CARTER\n"
      ]
     }
    ],
@@ -767,9 +769,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "Python 3.8.5 ('learn-env')",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -782,6 +784,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7525ddc99344d304bee386e4294f627a69ef3ddf90a93199e89e426185c49e1b"
+   }
   }
  },
  "nbformat": 4,
