added information on encoding issues for windows users

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,6 +331,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Windows Users:**  \n",
+    " The default encoding type set by Windows OS is different than that of MacOS or Linux. To ensure the proper encoding when loading the *usa_2016_gold_medals.csv* dataset you will need specify the encoding type by adding the argument `encoding='utf-8'`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -365,14 +373,6 @@
     "Fortunately we aren't limited to just using the `list` data structure — we can use a `dict` instead, so that we could look up the gender field using `[\"Gender\"]` or the nationality field using `[\"Nationality\"]`.\n",
     "\n",
     "In order to read the data in as a list of dictionaries rather than a list of lists, we can use `csv.DictReader`:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Windows Users:**  \n",
-    " The default encoding type set by Windows OS is different than that of MacOS or Linux. To ensure the proper encoding when loading the `usa_2016_gold_medals.csv` dataset you will need specify the encoding type using `encoding='utf-8'`."
    ]
   },
   {
