--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But as discussed previously, that data is currently loaded *in memory* using Python, but we often want to be able to store things *on disk* using some kind of file.\n",
+    "That data is currently loaded *in memory* using Python, but we often want to be able to store things *on disk* using some kind of file.\n",
     "\n",
     "So first, we need to *serialize* the data in some way. Serialization means that we are converting the Python object into a structured format for storage and sharing. Let's serialize this list of lists so that:\n",
     "\n",
